Debugging path, resource and replicate (mainly related to link replication).